--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
-    "husky": "^9.0.11"
+    "husky": "^9.0.11",
+    "semantic-release": "^23.0.5"
   }
 }
